Main Structure and Contact page 90%
Need to finish Submit button

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -9,7 +9,11 @@ footer {
 body {
     line-height: 1;
     margin: 0;
-    background-color: #000000;
+    background: rgb(0,0,0);
+    background: rgb(41,40,40);
+    background: -moz-linear-gradient(180deg, rgba(41,40,40,1) 0%, rgba(38,38,38,0.9724264705882353) 55%, rgba(42,42,42,1) 55%, rgba(242,242,242,1) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(41,40,40,1) 0%, rgba(38,38,38,0.9724264705882353) 55%, rgba(42,42,42,1) 55%, rgba(242,242,242,1) 100%);
+    background: linear-gradient(180deg, rgba(41,40,40,1) 0%, rgba(38,38,38,0.9724264705882353) 55%, rgba(42,42,42,1) 55%, rgba(242,242,242,1) 100%);
 }
 
 label{
@@ -17,13 +21,20 @@ label{
     font-weight: 600;
 }
 
-h2 {
+.contact{
     font-size: 34px;
     color: gold;
     padding: 20px;
 }
 
 p{
+    font-size: 16px;
+    line-height: 1.3;
+    padding: 26px;
+    color: gold;
+}
+
+form{
     font-size: 16px;
     line-height: 1.3;
     padding: 26px;
@@ -48,8 +59,7 @@ p{
 .row::after{
     display:table;
     clear: both;
-    content:"";
-    
+    content:"";    
 }
 
 .col-1{width: 8.33%;}
@@ -65,9 +75,8 @@ p{
 .col-11{width: 91.66%;}
 .col-12{width: 100%;}
 
-
-* {
-    box-sizing: border-box;
+.submit{
+    
 }
 
 /*######### Nav Bar ###########*/
@@ -149,8 +158,8 @@ button{
     display: block;
     text-align: center;
     margin: 5px;
-    border-radius: 7px;
-     box-shadow: 20px/*horizontal*/ 20px/*vertical*/ 50px/*blur*/ 20px/*spread*/ rgba(0/*Sh*/,0/*BG*/,0/*BX*/,0.5/*Op*/),
+    border-radius: 70px;
+    box-shadow: 20px/*horizontal*/ 20px/*vertical*/ 50px/*blur*/ 20px/*spread*/ rgba(0/*Sh*/,0/*BG*/,0/*BX*/,0.5/*Op*/),
         2px 2px 5px 2px rgba(0,0,0,1);
 }
 
@@ -174,9 +183,11 @@ div.rightside-col{
 h1.large{
     color: #fff;
     font-size: 56px;
+    font-family: 'Noto Sans TC', sans-serif;
     margin: 0;
     line-height: 70px;
     text-shadow: 2px 2px 5px black;
+    
 }
 
 h1.Section2Header{
@@ -184,11 +195,11 @@ h1.Section2Header{
     text-align: center;
     color: #FFD700;
     font-family: 'Noto Sans TC', sans-serif;
-
 }
 
-form h2{
-    color: #fff;
+h2{
+    color: gold;
+    font-family: 'Noto Sans TC', sans-serif;
 }
 
 input[type="text"]{
@@ -196,18 +207,28 @@ input[type="text"]{
     width: 400px;
     min-width: 100px;
     padding: 5px;
-    border-radius: 7px;
+    border-radius: 70px;
 }
 
+#query{
+    height:200px;
+    font-size:14pt;
+    border-radius: 15px;
+}
+#email{
+    text-decoration: none;
+}
+
+
 footer.footsy {
-    background-color: #666;
-    padding-left: 10%;
-    padding-bottom: 20%;
+    background-color: #000000;
+    padding-left: 1.5%;
 }
 
 footer.footsy h1{
-    color: #fff;
+    color: gold;
     font-size: 35px;
+    font-family: 'Noto Sans TC', sans-serif;
 }
 
 footer.footsy ul{
@@ -217,13 +238,11 @@ footer.footsy ul{
 }
 
 footer.footsy ul li{
-    color: #fff;
+    color: gold;
     font-size: 22px;
     line-height: 1.5;
-
+    font-family: 'Noto Sans TC', sans-serif;
 }
-
-
 
 /*##### Mobile #####*/
 
